--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.5.0",
     "discord-api-types": "^0.34.0",
-    "discord.js": "^13.8.0"
+    "discord.js": "^13.8.0",
+    "fuse.js": "^6.6.2",
+    "node-fetch": "^2.6.7",
+    "node-html-parser": "^5.3.3"
   }
 }
