--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+    container_name: discord-ping-repeater
     restart: unless-stopped
     networks:
       - discord-ping-repeater-bot-network
